--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -34,6 +34,7 @@
     <!--Mudblazor References-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.css" rel="stylesheet" />
 
     <!-- Google Tag Manager -->
     <script>
@@ -76,6 +77,7 @@
     </div>
 
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/MudBlazor.Markdown/MudBlazor.Markdown.min.js"></script>
     <script src="_framework/blazor.server.js"></script>
     <script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
 </body>
