--- a/Pages/Admin/Questions.razor
+++ b/Pages/Admin/Questions.razor
@@ -31,21 +31,21 @@ else
         </HeaderContent>
         <RowTemplate>
 
-            <MudTh DataLabel="ID">@context.Id</MudTh>
-            <MudTh DataLabel="Question">@context.QuestionMain</MudTh>
-            <MudTh DataLabel="ChildA">@context.ChildA</MudTh>
-            <MudTh HideSmall="true" DataLabel="ChildB">@context.ChildB</MudTh>
-            <MudTh HideSmall="true" DataLabel="ChildC">@context.ChildC</MudTh>
-            <MudTh HideSmall="true" DataLabel="ChildD">@context.ChildD</MudTh>
-            <MudTh HideSmall="true" DataLabel="ChildE">@context.ChildE</MudTh>
-            <MudTh DataLabel="Actions">
+            <MudTd DataLabel="ID">@context.Id</MudTd>
+            <MudTd DataLabel="Question">@context.QuestionMain</MudTd>
+            <MudTd DataLabel="ChildA">@context.ChildA</MudTd>
+            <MudTd HideSmall="true" DataLabel="ChildB">@context.ChildB</MudTd>
+            <MudTd HideSmall="true" DataLabel="ChildC">@context.ChildC</MudTd>
+            <MudTd HideSmall="true" DataLabel="ChildD">@context.ChildD</MudTd>
+            <MudTd HideSmall="true" DataLabel="ChildE">@context.ChildE</MudTd>
+            <MudTd DataLabel="Actions">
                 <NavLink class="btn btn-primary btn-sm" href="@GetQuestionDetailsUrl(context.Id)">
                     Details
                 </NavLink>
                 <NavLink class="btn btn-info btn-sm" href="@GetQuestionEditUrl(context.Id)">
                     Edit
                 </NavLink>
-            </MudTh>
+            </MudTd>
         </RowTemplate>
         <PagerContent>
             <MudTablePager />
