--- a/Pages/User/Articles.razor
+++ b/Pages/User/Articles.razor
@@ -2,19 +2,18 @@
 @inject IApiRepository repository
 
 <!-- Header-->
-<header class="py-5 medbase-font">
+<header class="py-5 medbase-font background-state">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <div class="col-lg-8 col-xl-4 col-xxl-4">
                 <div class="my-5 text-center text-xl-start">
-                    <h1 class="display-5 fw-bolder mb-2"
-                        style="font-size:4.75rem">
+                    <MudText Typo="Typo.h2" class="display-5 fw-bolder mb-2 text-light">
                         Articles🥸
-                    </h1>
-                    <p class="lead fw-normal mb-4">
+                    </MudText>
+                    <MudText class="text-light fw-normal mb-4">
                         Welcome to our Articles.
                         New articles every <em>Monday at 6pm</em>, touching on topics like psychology, money, studying and book reviews.
-                    </p>
+                    </MudText>
                 </div>
             </div>
             <div class="col-xl-8 col-xxl-8 text-center">
@@ -46,7 +45,7 @@
                         <div class="d-flex align-items-end justify-content-between">
                             <div class="d-flex align-items-center">
                                 <div class="small">
-                                    <div class="fw-bold">@item.Writer)</div>
+                                    <div class="fw-bold">@item.Writer</div>
                                     <div class="text-muted">
                                         @item.DatePosted.ToString("dddd, dd MMMM yyyy")
                                     </div>
