--- a/Pages/User/ChangeLog.razor
+++ b/Pages/User/ChangeLog.razor
@@ -2,67 +2,66 @@
 
 <PageTitle>Medbase | Change Log</PageTitle>
 
-<div class="container">
+<div class="container text-center">
     <MudBreadcrumbs Items="_items"></MudBreadcrumbs>
-    <div class="justify-content-center align-content-center">
-        <ul>
-            <li>
-                <h2 class="fw-bold">Version 1.3</h2>
-                <h5 class="text-muted">Release Date: 06 April 2023</h5>
-                <ul>
-                    <li>
-                        <em>*New Feature*</em> Added Search function to the questions
-                    </li>
-                    <li>
-                        <em>*New Feature*</em> Bottom navigation page for questions page
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <h2 class="fw-bold">Version 1.2</h2>
-                <h5 class="text-muted">Release Date: 11 March 2023</h5>
-                <ul>
-                    <li>
-                        Fixed error with quizzes that showed the same questions every session
-                    </li>
-                    <li>
-                        <em>*New Feature*</em> Breadcrumbs for easier navigation on the website
-                    </li>
-                    <li>
-                        <em>*New Feature*</em> Dark mode for mobile application
-                    </li>
-                    <li>
-                        Added new courses => Immunology and Medical Microbiology (3rd Year)
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <h2 class="fw-bold">Version 1.1</h2>
-                <h5 class="text-muted">Release Date: 2 March 2023</h5>
-                <ul>
-                    <li>
-                        Changed database servers after break down of the website
-                    </li>
-                    <li>
-                        Medbase is now completely free with premium plans and offerings scrapped
-                    </li>
-                    <li>
-                        User accounts removed
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <h2 class="fw-bold">Version 1.0.4</h2>
-                <h5 class="text-muted">Release Date: 14 February 2023</h5>
-                <ul>
-                    <li>
-                        Bug fixes and improvements
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+
+    <MudTimeline TimelineAlign="TimelineAlign.Start">
+        <MudTimelineItem Color="Color.Primary" Elevation="25">
+            <ItemOpposite>
+                <MudText Color="Color.Primary" Typo="Typo.h6">06 April 2023</MudText>
+            </ItemOpposite>
+            <ItemContent>
+                <MudPaper Elevation="0" Class="mt-n1">
+                    <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">Version 1.3</MudText>
+                    <MudText Typo="Typo.body2"><em>*New Feature*</em> Added Search function to the questions</MudText>
+                    <MudText Typo="Typo.body2"><em>*New Feature*</em> Bottom navigation page for questions page</MudText>
+                </MudPaper>
+            </ItemContent>
+        </MudTimelineItem>
+        <MudTimelineItem Color="Color.Primary" Elevation="25" TimelineAlign="TimelineAlign.End">
+            <ItemOpposite>
+                <MudText Color="Color.Primary" Typo="Typo.h6">11 March 2023</MudText>
+            </ItemOpposite>
+            <ItemContent>
+                <MudPaper Elevation="0" Class="mt-n1">
+                    <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">Version 1.3</MudText>
+                    <MudText Typo="Typo.body2">Fixed error with quizzes that showed the same questions every session</MudText>
+                    <MudText Typo="Typo.body2"><em>*New Feature*</em> Breadcrumbs for easier navigation on the website</MudText>
+                    <MudText Typo="Typo.body2"><em>*New Feature*</em> Dark mode for mobile application</MudText>
+                    <MudText Typo="Typo.body2">Added new courses => Immunology and Medical Microbiology (3rd Year)</MudText>
+                </MudPaper>
+            </ItemContent>
+        </MudTimelineItem>
+        <MudTimelineItem Color="Color.Primary" Elevation="25">
+            <ItemOpposite>
+                <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">2 March 2023</MudText>
+            </ItemOpposite>
+            <ItemContent>
+                <MudPaper Elevation="0" Class="mt-n1">
+                    <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">Version 1.1</MudText>
+                    <MudText Typo="Typo.body2">Changed database servers after break down of the website</MudText>
+                    <MudText Typo="Typo.body2">Medbase is now completely free with premium plans and offerings scrapped</MudText>
+                </MudPaper>
+            </ItemContent>
+        </MudTimelineItem>
+
+
+        <MudTimelineItem Color="Color.Primary" Elevation="25" TimelineAlign="TimelineAlign.End">
+            <ItemOpposite>
+                <MudText Color="Color.Primary" Typo="Typo.h6">14 February 2023</MudText>
+            </ItemOpposite>
+            <ItemContent>
+                <MudPaper Elevation="0" Class="mt-n1">
+                    <MudText Color="Color.Primary" Typo="Typo.h6" GutterBottom="true">Version 1.0.3</MudText>
+                    <MudText Typo="Typo.body2">The first version is released and uploaded as v1.0.3.</MudText>
+                    <MudText Typo="Typo.body2">Bug fixes and improvements</MudText>
+                </MudPaper>
+            </ItemContent>
+        </MudTimelineItem>
+
+    </MudTimeline>
 </div>
+
 
 @code {
     private List<BreadcrumbItem> _items = new List<BreadcrumbItem>
