--- a/Pages/User/LoadingComponent.razor
+++ b/Pages/User/LoadingComponent.razor
@@ -1,10 +1,8 @@
 ﻿
 <div class="text-center">
-    <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
-        <span class="visually-hidden">Loading...</span>
-    </div>
+    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+    <span class="visible">Loading...</span>
 </div>
-<span class="visible">Loading your questions, please wait a bit...😛</span>
 @code {
 
 }
