--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -2,16 +2,24 @@
 
 <PageTitle>Medbase | Medical School MCQs</PageTitle>
 
-<MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode"/>
+<MudThemeProvider @ref="@_mudThemeProvider" @bind-IsDarkMode="@_isDarkMode" Theme="someTheme"/>
 <MudDialogProvider/>
 <MudSnackbarProvider/>
 
 <MudLayout>
-    <MudAppBar Elevation="1">
+    <MudAppBar Elevation="0" style="background-image:var(--gradient); background-size:210%">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
-        <MudLink Typo="Typo.h6" Class="ml-3" Href="/home" Color="Color.Default">
+        <MudLink Typo="Typo.h6" Class="ml-3" Href="/home" Color="Color.Inherit">
             Medbase
         </MudLink>
+
+        @*<MudIconButton Href="/home" Icon="@Icons.Material.Filled.Dashboard" Color="Color.Inherit"></MudIconButton>
+        <MudSpacer />
+        <MudIconButton Href="/courses" Icon="@Icons.Material.Filled.Book" Color="Color.Inherit"></MudIconButton>
+        <MudSpacer />
+        <MudIconButton Href="/articles" Icon="@Icons.Material.Filled.Newspaper" Color="Color.Inherit"></MudIconButton>
+        <MudSpacer />
+        <MudIconButton Href="/about" Icon="@Icons.Material.Filled.QuestionAnswer" Color="Color.Inherit"></MudIconButton>*@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
         <MudNavMenu Rounded="true" Margin="Margin.Dense" Color="Color.Primary" Class="pa-2">
@@ -19,7 +27,7 @@
             <MudNavLink Href="/home" Icon="@Icons.Material.Filled.Dashboard">Home</MudNavLink>
             <MudNavLink Href="/courses" Icon="@Icons.Material.Filled.Book">Courses</MudNavLink>
             <MudNavLink Href="/articles" Icon="@Icons.Material.Filled.Newspaper">Articles</MudNavLink>
-            <MudNavLink Href="/about" Icon="@Icons.Material.Filled.QuestionAnswer">About</MudNavLink>
+            <MudNavLink Href="/about" Icon="@Icons.Material.Filled.QuestionAnswer">About & Contact</MudNavLink>
 
             <MudDivider/>
 
@@ -37,6 +45,14 @@
     bool _drawerOpen = true;
     private MudThemeProvider _mudThemeProvider;
     private bool _isDarkMode;
+    MudTheme someTheme = new()
+    {
+        Palette = new PaletteLight()
+        {
+            Primary = Colors.Blue.Lighten1,
+            AppbarBackground = Colors.Blue.Lighten2,
+        },
+    };
 
     void DrawerToggle()
     {
