--- a/Pages/User/Courses.razor
+++ b/Pages/User/Courses.razor
@@ -2,6 +2,7 @@
 @using MedbaseBlazor.Models
 @using MedbaseBlazor.Repositories
 @inject IApiRepository repository
+@inject NavigationManager navMananger;
 
 <PageTitle>Courses</PageTitle>
 <div class="container">
@@ -14,24 +15,20 @@
     }
     else
     {
-        <div class="row">
+        <div class="row pt-5">
             @foreach (Course item in CoursesList)
             {
-                <div class="col-lg-4 col-sm-6 mb-5">
-                    <MudCard>
-                        <MudCardMedia Image="@item.ImageURL" Height="200" />
+                <div class="col-6 col-lg-4 col-sm-6 mb-5">
+                    <MudCard @onclick="() => GoToTopics(item.CourseRef)">
+                        <MudCardMedia Image="@item.ImageURL" Height="100" />
                         <MudCardContent>
-                            <MudText Typo="Typo.h5">
+                            <MudText Typo="Typo.h6">
                                 @item.Title
                             </MudText>
-                            <MudText Typo="Typo.body2">
+                            <MudText Typo="Typo.body2" Class="d-lg-block d-none">
                                 @item.Description
                             </MudText>
                         </MudCardContent>
-                        <MudCardActions>
-                            <MudButton Variant="Variant.Text" Color="Color.Primary" Href="@($"/topics/{item.CourseRef}")">Go To Course</MudButton>
-                            <MudButton Variant="Variant.Text" Color="Color.Secondary">Share</MudButton>
-                        </MudCardActions>
                     </MudCard>
                 </div>
 
@@ -53,4 +50,8 @@
     protected override Task OnInitializedAsync() => GetArticlesAsync();
 
     private async Task GetArticlesAsync() => CoursesList = await repository.GetCourses();
+    private void GoToTopics(string courseRef)
+    {
+        navMananger.NavigateTo($"/topics/{courseRef}");
+    }
 }
