--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -31,10 +31,10 @@
     <div class="row gx-5 mt-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
-                <h2 class="fw-bolder">From our blog</h2>
-                <p class="lead fw-normal text-muted mb-5">
+                <MudText class="fw-bolder" Typo="Typo.h5">From our blog</MudText>
+                <MudText class="lead fw-normal mb-5" Typo="Typo.h6">
                     A few bits & bobs on medical school and the likes
-                </p>
+                </MudText>
             </div>
         </div>
     </div>
@@ -42,31 +42,24 @@
         @foreach (Article item in Articles)
         {
             <div class="col-lg-4 mb-5">
-                <div class="card h-100 shadow border-0" @onclick="() => GoToArticle(item.Id)">
-                    <img class="card-img-top" src="@item.ImageURL" alt="..." />
-                    <div class="card-body p-4">
-                        <a class="text-decoration-none link-dark stretched-link" asp-action="ArticleView" asp-route-id="@item.Id">
-                            <h5 class="card-title mb-3">
-                                @item.Title
-                            </h5>
-                        </a>
-                        <p class="card-text mb-0">
+                <MudCard @onclick="() => GoToArticle(item.Id)">
+                    <MudCardMedia Height="300" Image="@item.ImageURL" alt="..." />
+                    <MudCardContent class="card-body p-4">
+                        <h5 class="card-title mb-3">
+                            @item.Title
+                        </h5>
+                        <p class="mb-0">
                             @item.Summary
                         </p>
-                    </div>
-                    <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                        <div class="d-flex align-items-end justify-content-between">
-                            <div class="d-flex align-items-center">
-                                <div class="small">
-                                    <div class="fw-bold">@item.Writer</div>
-                                    <div class="text-muted">
-                                        @item.DatePosted.ToString("dddd, dd MMMM yyyy")
-                                    </div>
-                                </div>
-                            </div>
+                        <MudDivider/>
+                        <div class="small">
+                            <MudText Typo="Typo.subtitle2" class="fw-bold">@item.Writer</MudText>
+                            <MudText Typo="Typo.caption">
+                                @item.DatePosted.ToString("dddd, dd MMMM yyyy")
+                            </MudText>
                         </div>
-                    </div>
-                </div>
+                    </MudCardContent>
+                </MudCard>
             </div>
         }
     </div>
