--- a/Pages/Admin/Editors/QuestionsEditor.razor
+++ b/Pages/Admin/Editors/QuestionsEditor.razor
@@ -3,7 +3,7 @@
 @page "/admin/question/add"
 @layout AdminLayout
 @inject IApiRepository repository
-@using MedbaseBlazor.Models
+@using MedbaseLibrary.Models
 @using MedbaseBlazor.Pages.Admin.Utilities
 @using Markdig
 
