--- a/Pages/Admin/Questions.razor
+++ b/Pages/Admin/Questions.razor
@@ -2,7 +2,7 @@
 @page "/admin/questions"
 @layout AdminLayout
 @inject IApiRepository repository
-@using MedbaseBlazor.Services
+@using MedbaseLibrary.Services
 
 <PageTitle>Questions</PageTitle>
 
