--- a/Pages/User/About.razor
+++ b/Pages/User/About.razor
@@ -44,7 +44,7 @@
                 <div class="h5 mb-2">Chat with me</div>
                 <p class="mb-0">
                     If WhatsApp is your preferred channel of communication,
-                    <MudLink href="https://wa.me/263718086035">
+                    <MudLink href="@Constants.LinkToWhatsApp">
                         have at it.
                     </MudLink>
                 </p>
@@ -54,8 +54,8 @@
                 <div class="h5">Send me an email</div>
                 <p class="mb-0">
                     Get in touch at
-                    <MudLink href="mailto:admin@medbase.co.zw?subject=Medbase:%20<Subject%20here>">
-                        admin@medbase.co.zw
+                    <MudLink href="@Constants.LinkToMyEmail">
+                        tanaka@tanakamawere.co.zw
                     </MudLink>
                 </p>
             </div>
@@ -81,8 +81,8 @@
             <div class="h5">Visit my website</div>
             <MudText class="mb-0">
                 Get in touch at
-                <MudLink href="https://www.tanakamawere.com">
-                    www.tanakamawere.com
+                <MudLink href="@Constants.LinkToMyWebsite">
+                    @Constants.LinkToMyWebsite
                 </MudLink>
             </MudText>
         </div>
