--- a/Pages/User/ArticleView.razor
+++ b/Pages/User/ArticleView.razor
@@ -1,5 +1,5 @@
 ﻿@page "/article/{id:int}"
-@using MedbaseBlazor.Models
+@using MedbaseLibrary.Models
 @inject IApiRepository repository
 @using Markdig
 
