--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,8 +8,8 @@
 @using Microsoft.JSInterop
 @using MedbaseBlazor
 @using MedbaseBlazor.Shared
-@using MedbaseBlazor.Repositories
-@using MedbaseBlazor.Models
+@using MedbaseLibrary.Services
+@using MedbaseLibrary.Models
 @using MedbaseBlazor.Pages.Admin
 @using MedbaseBlazor.Pages.User
 @using MedbaseBlazor.Pages.Views
