--- a/App.razor
+++ b/App.razor
@@ -5,10 +5,7 @@
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
         <NotFound>
-            <PageTitle>Not found</PageTitle>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Sorry, there's nothing at this address.</p>
-            </LayoutView>
+            <NotFoundComponent />
         </NotFound>
     </Router>
 </CascadingAuthenticationState>
