--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -1,33 +1,54 @@
 ﻿@page "/"
 @page "/home"
-@using MedbaseBlazor.Models;
-@using MedbaseBlazor.Repositories;
+@using MedbaseLibrary.Models;
+@using MedbaseLibrary.Services;
 @inject NavigationManager navManager;
 @inject IApiRepository repository
 
 <!-- Header-->
+<header class="py-5 background-state">
+    <div class="px-4 pt-5 my-5 text-center border-bottom">
+        <MudImage Src="img/medbase_transparent.png" Style="max-height:100px"/>
+        <div class="col-lg-6 mx-auto">
+            <MudText Typo="Typo.h6" Class="lead fw-normal text-light">Over 2,000 MCQs (with answers & explanations) on <strong>Pre-clinical</strong> and <strong>Clinical Medical School</strong> courses</MudText>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                <MudButton Variant="Variant.Filled" Href="/courses" StartIcon="@Icons.Material.Filled.QuestionAnswer" Color="Color.Primary">MCQs</MudButton>
+                <MudButton Variant="Variant.Filled" Href="/notes" StartIcon="@Icons.Material.Filled.NoteAdd" Color="Color.Primary">Notes (New)</MudButton>
+                <MudButton Variant="Variant.Filled" Href="/about" StartIcon="@Icons.Material.Filled.Book" Color="Color.Primary">Learn More</MudButton>
+            </div>
+        </div>
+        <div class="overflow-hidden" style="max-height: 30vh;">
+            <div class="container px-5">
+                <img src="img/notes.svg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+            </div>
+        </div>
+    </div>
+
+</header>
+@* 
 <header class="py-5 background-state">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <div class="col-lg-6 col-xl-6 col-xxl-4">
                 <div class="my-5 text-center text-xl-start">
                     <MudText Typo="Typo.h2" Class="fw-bold text-light" Color="Color.Inherit">medbase😃</MudText>
-                    <MudText Typo="Typo.subtitle1" Class="lead fw-normal text-light">Over 1,500 MCQs (with answers) on Anatomy, Physiology & Pathology</MudText>
+                    <MudText Typo="Typo.subtitle1" Class="lead fw-normal text-light">Over 2,000 MCQs (with answers & explanations) on preclinical and clinical medical school courses</MudText>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                        <MudButton Variant="Variant.Filled" Href="/courses" StartIcon="@Icons.Material.Filled.ContentPasteGo" Color="Color.Primary">Get Started</MudButton>
+                        <MudButton Variant="Variant.Filled" Href="/courses" StartIcon="@Icons.Material.Filled.ContentPasteGo" Color="Color.Primary">MCQs</MudButton>
+                        <MudButton Variant="Variant.Filled" Href="/notes" StartIcon="@Icons.Material.Filled.ContentPasteGo" Color="Color.Primary">Notes</MudButton>
                         <MudButton Variant="Variant.Filled" Href="/about" StartIcon="@Icons.Material.Filled.Book" Color="Color.Primary">Learn More</MudButton>
                     </div>
                 </div>
             </div>
             <div class="col-xl-6 col-xxl-6 text-center">
-                <img class="img-fluid rounded-3 my-5" src="img/home_illustration.svg" alt="..." />
+                <img class="img-fluid rounded-3 my-5" src="img/notes.svg" alt="..." />
             </div>
         </div>
     </div>
 
-</header>
+</header> *@
 
-<section class="container">
+<section class="container mt-5">
     <div class="row gx-5 mt-5 justify-content-center">
         <div class="col-lg-8 col-xl-6">
             <div class="text-center">
@@ -65,7 +86,24 @@
     </div>
 </section>
 
-<section class="stacked-image stacked">
+<div class="container my-5">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+            <MudText Typo="Typo.h2" class="display-4 fw-bold">Medbase Mobile Application📱</MudText>
+            <MudText>
+                Get your MCQs offline, create quizzes & much more. Everything is better in the app.
+            </MudText>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                <a href="https://play.google.com/store/apps/details?id=com.tanakamawere.medbasehybrid"><img src="img/google_play_badge.png" alt="" style="max-width:300px" /></a>
+            </div>
+        </div>
+        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+            <img class="rounded-lg-3 h-100" src="img/deviceframes.png" alt="" width="360">
+        </div>
+    </div>
+</div>
+
+@* <section class="stacked-image stacked">
     <div class="container mt-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-centershadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -82,7 +120,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> *@
 
 @code{
     private IEnumerable<Article> Articles { get; set; } = Enumerable.Empty<Article>();
