--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="~/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="~/favicon-16x16.png">
     <link rel="manifest" href="~/site.webmanifest">
-    <meta name="theme-color" content="#6A1B9A">
+    <meta name="theme-color" content="#80b0fa">
 
     <!--Mudblazor References-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
