--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -74,7 +74,7 @@ a, .btn-link {
 
 .background-state {
     background-size: 500%;
-    background-image: linear-gradient(90deg, purple, #48009f, purple);
+    background-image: linear-gradient(90deg, #82b1ff, #00B6FF, #064789);
     animation: bg-animation 30s infinite;
 }
 
